--- a/styles.css
+++ b/styles.css
@@ -16,19 +16,6 @@ h5 {
   color: rgb(184, 109, 255);
   display: inline;
 }
-ul {
-  margin: 0 0 10px;
-  padding: 0;
-}
-
-li {
-  color: rgb(184, 109, 255);
-  font-size: 16px;
-  font-weight: 100;
-  height: 19px;
-  line-height: 1;
-  list-style: none;
-}
 
 .weather-app {
   border: 1px solid #dadde1;
@@ -114,7 +101,7 @@ form {
   padding: 15px;
 }
 li {
-  display: inline ;
+  display: block ;
   font-size: 18px;
   font-weight: 300px;
   line-height: 30px;
