--- a/styles.css
+++ b/styles.css
@@ -89,8 +89,8 @@ form {
   font-size: 30px;
 }
 .container {
-  margin-top: 30px;
-  margin-left: 30px;
+  margin-top: 35px;
+  margin-left: 35px;
   border: 15px cornflowerblue;
     );
   width: 800px;
@@ -134,7 +134,7 @@ button {
   border-radius:5px;
   }
   div{
-    border:1px
+    border:1px;
     display: inline
   }
   .days{
