--- a/styles.css
+++ b/styles.css
@@ -14,15 +14,27 @@ h5 {
   padding: 5px;
   text-align: center;
   color: rgb(184, 109, 255);
-  display: inline;
+}
+ul {
+  margin: 0 0 10px;
+  padding: 0;
+}
+
+li {
+  color: rgb(184, 109, 255);
+  font-size: 16px;
+  font-weight: 100;
+  height: 19px;
+  line-height: 1;
+  list-style: none;
 }
 
 .weather-app {
   border: 1px solid #dadde1;
   padding: 15px;
-  margin: auto;
+  margin: 20px auto;
   border-radius: 10px;
-  max-width: 800px;
+  max-width: 600px;
 }
 
 .weather-icon {
@@ -48,7 +60,7 @@ h5 {
 }
 
 form {
-  padding: 0px 0px 0px 0px;
+  padding: 20px 0px 0px 0px;
   width: 100px;
   size: 150px;
   display: inline;
@@ -79,6 +91,7 @@ form {
 }
 .board-title{
   font-size:12px;
+
 }
 .temp {
   text-align: center;
@@ -89,9 +102,9 @@ form {
   font-size: 30px;
 }
 .container {
-  margin-top: 35px;
-  margin-left: 35px;
-  border: 15px cornflowerblue;
+  margin-top: 50px;
+  margin-left: 250px;
+  border: 10px cornflowerblue;
     );
   width: 800px;
   box-shadow: 10px 10px 10px;
@@ -134,7 +147,7 @@ button {
   border-radius:5px;
   }
   div{
-    border:1px;
+    border:1px
     display: inline
   }
   .days{
@@ -142,8 +155,8 @@ button {
   }
   .wave{
     align-content:center;
-    width:300px;
-    margin: 0 0 0 auto;
+    width:600px;
+    margin:  0 0 auto;
   }
   .time{
     text-align: left;
